# scara_ros

./: README.md
deprecated/SCARAsw/: package.xml
deprecated/SCARAsw/config/: SCARAsw.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml
deprecated/SCARAsw/launch/: demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  ros_controllers.launch
deprecated/SCARAsw/meshes/: base.STL  zeta.STL
deprecated/SCARAsw/urdf/: SCARAsw.csv  hola.SCARAsw.urdf
deprecated/felipe/: package.xml
deprecated/felipe/scripts/: listener.py
deprecated/scara_config2/: CMakeLists.txt  package.xml
deprecated/scara_config2/config/: joint_limits.yaml  (+1 more)
hardware/: readme.txt
hardware/stepper_driver/: stepper_driver.ino
nelen_control/: CMakeLists.txt  package.xml
nelen_control/config/: fake_controllers.yaml  nelen.srdf  ros_controllers.yaml
nelen_control/launch/: gazebo.launch  move_group.launch  moveit_rviz.launch  ros_controllers.launch
nelen_control/python/: POS_sim_codo.py  control_references.py  controller_odrive.py  controller_sim.py  encoder.py  nodo_bo.py  nodo_pso.py  nodo_pso_retard.py  nodo_pso_z.py  plot_utils  pso.py  run_tray.py  run_tray_plot.py  s_curve_trayectory.py  trayectory.py
nelen_description/: CMakeLists.txt  package.xml  urdf.rviz
nelen_description/launch/: display.launch  load.launch  load_sim.launch
nelen_description/meshes/: base_corrected.blend
nelen_description/rviz/: urdf.rviz
nelen_description/urdf/: nelen.urdf  nelen.urdf.xacro
nelen_firmware/nelen_code/: ReadMe  demo.py  homing.py  movto.py  movto_trash.py  requirements.txt  run_me  test.py  testa.py
nelen_firmware/python/: Homing.py  encoder.py  mlx90614.py  mov_to_xyz.py  nelen.py  set_mcp23017.py
nelen_utils/: CMakeLists.txt  package.xml
nelen_utils/config/: rqt_multiplot.xml
nelen_utils/launch/: multiplot.launch
src/: CMakeLists.txt
src/SCARAsw/: CMakeLists.txt  SCARAsw.gv  package.xml
src/felipe/: CMakeLists.txt
src/nelen/: CMakeLists.txt  package.xml
src/neleng_config/: CMakeLists.txt  package.xml
src/scaraiit/: CMakeLists.txt  package.xml
src_firmware/: MCP230XX.py  change_direction.py  encoder_1s.py  hombro_config.json  homing_hombro.py  i2c_gpio.py  move_mot_test.py  rc_config.json  spitest.py
(+88 files in other folders)
